Update templates & fix carousel bugs Templates now have date of 2019 BBC Young Reporter day on them; Carousel bug whereby if a dot was clicked & then the used scrolled away, the dot would turn black; Dots now appear in the correct position on all screen sizes (they were too low on mobile).

--- a/css/article-page.css
+++ b/css/article-page.css
@@ -55,12 +55,14 @@ iframe {
 
 .slick-dots li button:before {
     font-size: 30px;
+    opacity: 1;
+    color: #ababab;
 }
 
 .slick-dots li.slick-active button::before {
     font-size: 40px;
+    opacity: 1;
     color: var(--mdc-theme-primary);
-    top: 0.5px;
 }
 
 
